# projetoPAA

./: README.md  __main__.py  app.py  filmes.json  pyproject.toml
back/: app.py  exemplosPerguntas.py  filmes.json  jsonGenerator.py
backend/: app.py  engine.py  filmes.json  jsonGenerator.py  knowledgebase.py  preprocessor.py  pyproject.toml
front/: package-lock.json
front/src/: App.css  App.js
front/src/API/: perguntar.tsx
src/: data_base.py  engine.py  py_app.py  text_preprocessor.py
