[project]
name = "projetopaa"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauan Henrique",email = "kauanhenriquesr@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
