[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauan Henrique",email = "kauanhenriquesr@outlook.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "requests (>=2.32.4,<3.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
